# Skillbox_Search_Engine

./: CMakeLists.txt  README.md  Skillbox_Search_Engine.cpp  Skillbox_Search_Engine.h
JSON files/: config.json
Src/: ConverterJSON.cpp  ConverterJSON.h  InvertedIndex.cpp  SearchServer.cpp  SearchServer.h
Tests/: CMakeLists.txt  Tests.cpp  Tests.h
